Final bug fixes...